examples/test/testpolicy5673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5673
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key15: value37
      key7: value0
      key20: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value36
          key42: value47
          key32: value23
      podSelector:
        matchLabels:
          key34: value49
          key45: value20
